Design background and site logo

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,12 @@
 doctype html
+
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet' href='/stylesheets/style.css')
+
   body
+    div.bg
+    h1.logo(onclick="location.href='/'") DGDB
+
     block content
