--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,51 @@
+@import url('https://fonts.googleapis.com/css?family=Graduate')
+
+
+// *------------------------------------------------------------------------* //
+// *                                                                 Layout * //
+// *------------------------------------------------------------------------* //
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+    margin 0
+    background black
+
+div.bg
+    position fixed
+    top 0
+    left 0
+    width 100%
+    height 100%
+    z-index -1
+
+    background url('/images/bg.png') repeat  // Wallpaper is from http://www.dinpattern.com/
+    filter blur(3px)
+
+
+// *------------------------------------------------------------------------* //
+// *                                                                   Text * //
+// *------------------------------------------------------------------------* //
+h1.logo
+    margin 0
+    margin-left 20px
+
+    font 60pt Graduate
+    color white
+
+    -webkit-text-fill-color alpha(white, .5)
+    -webkit-text-stroke-width 2px
+    -webkit-text-stroke-color white
+
+    transition text-shadow 1s
+    text-shadow -2px 2px 0 rgba(0, 230, 230, .5),
+                -4px 4px 0 rgba(0, 200, 200, .5),
+                -6px 6px 0 rgba(0, 170, 170, .5)  // Credit: https://designshack.net/articles/css/12-fun-css-text-shadows-you-can-copy-and-paste/
+
+    cursor pointer
+
+h1.logo:hover
+    transition text-shadow .5s
+    text-shadow -4px  2px 0    rgba(0, 230, 230, .5),
+                -8px  4px 0    rgba(0, 200, 200, .5),
+                -12px 6px 0    rgba(0, 170, 170, .5),
+                -2px  2px 10px rgb(0, 230, 230),
+                -4px  4px 20px rgb(0, 200, 200),
+                -6px  6px 30px rgb(0, 170, 170)
