--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Comfortaa");
 @import url("https://fonts.googleapis.com/css?family=Graduate");
 body {
   margin: 0;
@@ -13,9 +14,35 @@ div.bg {
   background: url("/images/bg.png") repeat;
   filter: blur(3px);
 }
+div.container {
+  display: flex;
+}
+div.logo {
+  order: 1;
+  flex: 1 1 fit-content;
+}
+div.nav {
+  order: 2;
+  flex: 1 1 auto;
+  margin-left: 50px;
+  align-self: flex-end;
+}
+div.user-cp {
+  order: 3;
+  flex: 1 1 fit-content;
+  margin-right: 50px;
+  align-self: flex-end;
+}
+div.content {
+  margin-left: 20px;
+  margin-right: 20px;
+  background: rgba(0,150,255,0.1);
+  border: 1px rgba(0,150,255,0.5) solid;
+}
 h1.logo {
   margin: 0;
   margin-left: 20px;
+  width: 200px;
   font: 60pt Graduate;
   color: #fff;
   -webkit-text-fill-color: rgba(255,255,255,0.5);
@@ -28,4 +55,20 @@ h1.logo {
 h1.logo:hover {
   transition: text-shadow 0.5s;
   text-shadow: -4px 2px 0 rgba(0,230,230,0.5), -8px 4px 0 rgba(0,200,200,0.5), -12px 6px 0 rgba(0,170,170,0.5), -2px 2px 10px #00e6e6, -4px 4px 20px #00c8c8, -6px 6px 30px #0aa;
+}
+p {
+  margin: 5px;
+  font: 10pt Comfortaa;
+  color: #fff;
+}
+a {
+  text-decoration: none;
+  color: #0ff;
+}
+a.variant-1 {
+  color: #ffc864;
+}
+a:hover {
+  text-decoration: underline;
+  text-decoration-color: #fff;
 }
