--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa')
 @import url('https://fonts.googleapis.com/css?family=Graduate')
 
 
@@ -19,6 +20,35 @@ div.bg
     background url('/images/bg.png') repeat  // Wallpaper is from http://www.dinpattern.com/
     filter blur(3px)
 
+div.container
+    display flex
+
+// Home page
+div.logo
+    order 1
+    flex 1 1 fit-content
+
+div.nav
+    order 2
+    flex 1 1 auto
+
+    margin-left 50px
+    align-self flex-end
+
+div.user-cp
+    order 3
+    flex 1 1 fit-content
+
+    margin-right 50px
+    align-self flex-end
+
+div.content
+    margin-left 20px
+    margin-right 20px
+
+    background rgba(0, 150, 255, .1)
+    border 1px rgba(0, 150, 255, .5) solid
+
 
 // *------------------------------------------------------------------------* //
 // *                                                                   Text * //
@@ -26,6 +56,7 @@ div.bg
 h1.logo
     margin 0
     margin-left 20px
+    width 200px
 
     font 60pt Graduate
     color white
@@ -49,3 +80,20 @@ h1.logo:hover
                 -2px  2px 10px rgb(0, 230, 230),
                 -4px  4px 20px rgb(0, 200, 200),
                 -6px  6px 30px rgb(0, 170, 170)
+
+p
+    margin 5px
+
+    font 10pt Comfortaa
+    color white
+
+a
+    text-decoration none
+    color cyan
+
+a.variant-1
+    color rgb(255, 200, 100)
+
+a:hover
+    text-decoration underline
+    text-decoration-color white
