--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -42,6 +42,9 @@ div.user-cp
     margin-right 50px
     align-self flex-end
 
+div.nav p, div.user-cp p
+    font-size 11pt
+
 div.content
     margin-left 20px
     margin-right 20px
@@ -84,7 +87,7 @@ h1.logo:hover
 p
     margin 5px
 
-    font 10pt Comfortaa
+    font 9pt Comfortaa
     color white
 
 a
