--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa')
 @import url('https://fonts.googleapis.com/css?family=Graduate')
 
 
@@ -87,7 +86,7 @@ h1.logo:hover
 p
     margin 5px
 
-    font 9pt Comfortaa
+    font 10pt 'Droid Sans', Verdana
     color white
 
 a
